# life

./: Cargo.toml
.github/workflows/: build.yml  health.yml  lint.sh  package.sh
src/: cell.rs  field.rs  game.rs  lib.rs  plotter.rs
tests/: blinker.txt  oscillators.rs  still_lifes.rs
